Add let stmt parsing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.76"
+strum = { version = "0.25.0", features = ["strum_macros"] }
+strum_macros = "0.25.3"
